(lang dune 3.16)

(name kezo)

(generate_opam_files true)

(source
 (github imyanice/kezo))

(authors "Yanice")

(maintainers "Yanice")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name kezo)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
